--- a/getJson.html
+++ b/getJson.html
@@ -18,7 +18,7 @@ xmlhttp.onload = function() {
   const akap = document.querySelector(".a")
   akap.innerHTML = myObj[1].name;
 };
-xmlhttp.open("GET", "json.php?r=" + '1');
+xmlhttp.open("GET", "otwock/json.php?r=" + '1');
 xmlhttp.send();
 
 
